@@ -1,5 +1,10 @@
 2012-05-17  Sergio Martin <sergio.martin@artica.es>
 
+	* install.php: Fixed number of step mistakes
+	in the install process
+
+2012-05-17  Sergio Martin <sergio.martin@artica.es>
+
 	* include/functions_api.php: Added create_network_module_from_component 
 	operation to API
 	Merged from trunk
